--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -36,14 +36,16 @@ a{
   text-decoration: none;
   color: #060000;
   font-weight: bold;
+  text-align: center;
 
 
 }
 
 .logo{
+  margin-top: 10px;
+  margin-left: 30px;
   height: auto;
-  width: 50px;
-  padding: 20px;
+  width: 100px;
 }
 
 #Home{  
