--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -17,6 +17,7 @@ nav{
   top: 0;
 
 }
+
 ul{
   float: right;
   padding: 0;
@@ -49,30 +50,40 @@ a{
 }
 
 #Home{  
-  background-image: url('1st Image.jpg');
+  background-image: url('1st Image Home.png');
   background-size: cover;
-  height: 920px;
+  height: 880px;
   display: inline-block;
   background-repeat: no-repeat;
   width: 100%;
 }
 
+#Home::before{
+  position: absolute;
+  content: '';
+  width: 2000px;
+  height: 60px;
+  background-color: #FBECE1;
+  bottom: 0;
+
+}
+
 #Our_Impact{  
-  height: 920px;
+  height: 860px;
   background: yellow;
   display: inline-block;
   width:100%;
 }
 
 #Your_Impact{  
-  height: 920px;
+  height: 860px;;
   background: blue;
   display: inline-block;
   width: 100%;
 
 }
 #Donate_Now{  
-  height: 920px;
+  height: 860px;;
   background: green;
   display: inline-block;
   width:100%;
@@ -90,6 +101,8 @@ a{
   transform: translateX(-50%) translateY(-50%);
   font-size: 40px;
   font-weight: bold;
+  color: #060000;
+
 }
 
 #Donate_Now_Text{
