--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -15,6 +15,7 @@ nav{
   /*prevents scrollbars from appearing*/
   position: fixed;
   top: 0;
+  z-index: 1; /*Specifies stack order for elements - in this case nav bar has to be in front/on top of all elements on website https://www.w3schools.com/cssref/pr_pos_z-index.asp*/
 
 }
 
@@ -111,12 +112,15 @@ a{
 }
 
 button{
-  padding: 5px 10px;
-  margin-top: -10px;
+  padding: 7px 10px;
+  margin-top: -15px;
   background-color: rgba(46,196,182,1);
   border: none;
   border-radius: 50px;
   cursor: pointer;
+  color: #FFFFFF;
+  font-weight: bold;
+  text-align: center;
 }
 h1{
   margin: 100px;
