--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -5,7 +5,7 @@ html{
 body{
   margin: 0;
   padding: 0; 
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav{
@@ -55,7 +55,7 @@ a{
   background-size: cover;
   background-position: center center;
   height: 100vh;
-  /*vh or v*/
+  /*vh or viewport height allows for responsive height when adjusting to mobile resolutions*/
   display: inline-block;
   background-repeat: no-repeat;
   width: 100%;
@@ -64,7 +64,7 @@ a{
 
 #Our_Impact{  
   height: 100vh;
-  background: yellow;
+  background: #F6F6F6;
   display: inline-block;
   width:100%;
 }
@@ -88,11 +88,11 @@ a{
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  font-family: Arial;
   font-weight: bold;
   color: #060000;
   position: absolute;
   font-size: 2.5em;
+  /*em allows for relative measurements/units for text allowing for responsiveness*/
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
@@ -124,13 +124,16 @@ h1{
 @media screen and (min-width: 601px) {
     #Home_Text{
       font-size: 2.5em;
+      opacity: 0.81;
     }
   }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
 @media screen and (max-width: 600px) {
   #Home_Text {
-    font-size: 1em;
+    font-size: 1.375em;
+    /*Done exactly/properly to pixel size from Adobe XD mockup - used px to em conversion from w2s to calculate this*/
+    opacity: 0.81;
   }
 }
 
