--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -71,7 +71,7 @@ a{
 
 #Your_Impact{  
   height: 100vh;
-  background: blue;
+  background: #90ee90;
   display: inline-block;
   width: 100%;
 
@@ -105,10 +105,11 @@ a{
 }
 
 button{
-  padding: 7px 10px;
+  padding: 7px 8px;
   margin-top: -15px;
   background-color: rgba(46,196,182,1);
   border: none;
+  font-family: Montserrat;
   border-radius: 50px;
   cursor: pointer;
   color: #FFFFFF;
