--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -73,10 +73,9 @@ a{
 
 
 #Our_Impact{  
-  height: 100vh;
+  height: 100%;
   background: #F6F6F6;
   display: inline-block;
-  width: 100%;
 }
 
 #Our_Impact_Title{
@@ -87,14 +86,22 @@ a{
 
 #Your_Impact{  
   height: 100vh;
-  background: #90ee90;
+  background: #F6F6F6;
   display: inline-block;
   width: 100%;
 
 }
+
+#Overall_Your_Impact_Text{
+  display: flex;
+  text-align: center;
+  width: auto;
+
+}
+
 #Donate_Now{  
   height: 100vh;
-  background: green;
+  background: #F6F6F6;
   display: inline-block;
   width: 100%;
 
@@ -116,7 +123,7 @@ a{
 }
 
 #Donate_Now_Text{
-  color: #FFFFFF;
+  color: #000000;
   font-weight: bold;
 }
 
@@ -139,7 +146,10 @@ h1{
   padding: 0;
 }
 
-#Images_Our_Impact{
+.Images_Your_Impact{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
