--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -50,7 +50,6 @@ a{
   font-weight: bold;
   text-align: center;
 
-
 }
 
 .logo{
@@ -86,13 +85,27 @@ a{
 
 #Your_Impact{  
   height: 100vh;
-  background: #F6F6F6;
+  background: lightgreen;
   display: inline-block;
   width: 100%;
 
 }
 
+.Images_Your_Impact{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+#Your_Impact_Titles{
+  display: flex;
+  margin-left: auto;
+}
+
 #Overall_Your_Impact_Text{
+  font-size: 25px;
   display: flex;
   text-align: center;
   width: auto;
@@ -146,11 +159,7 @@ h1{
   padding: 0;
 }
 
-.Images_Your_Impact{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 
 
 
@@ -189,3 +198,9 @@ h1{
   }
 }
 
+.Donation_Option{
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+
+}
