--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -201,6 +201,17 @@ h1{
 .Donation_Option{
   display: block;
   text-align: center;
-  margin: 0 auto;
+  
+}
+
+.Donation_Option select{
+  background: #FFFFFF;
+  border-color: #707070; 
+  color: #000000;
+  text-align: center; 
+  padding: 0 0 0 20px;
+  font-size: 2.5em;
+  width: 410px;
+
 
 }
