--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -101,6 +101,8 @@ a{
 
 #Your_Impact_Titles{
   display: flex;
+  flex-direction: row; 
+  justify-content: center;
   margin-left: auto;
 }
 
@@ -155,6 +157,7 @@ button{
 
 h1{
   margin: 70px;
+  font-size: 2.5em; 
   text-align: center;
   padding: 0;
 }
@@ -206,12 +209,15 @@ h1{
 
 .Donation_Option select{
   background: #FFFFFF;
-  border-color: #707070; 
+  border-color: #707070;
+  border-width: 3px;
   color: #000000;
   text-align: center; 
-  padding: 0 0 0 20px;
-  font-size: 2.5em;
+  padding: 0 0 0 0.5em;
+  border-radius: 2.5em;
+  font-size: 2em;
   width: 410px;
+  height: 50px;
 
 
 }
