--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -142,7 +142,7 @@ a{
   font-weight: bold;
 }
 
-button{
+.Donation_Nav{
   padding: 7px 8px;
   margin-top: -15px;
   background-color: rgba(46,196,182,1);
@@ -200,9 +200,8 @@ h1{
       display: block;
   }
 }
-
+ 
 .Donation_Option{
-  display: block;
   text-align: center;
   
 }
@@ -214,10 +213,31 @@ h1{
   color: #000000;
   text-align: center; 
   padding: 0 0 0 0.5em;
-  border-radius: 2.5em;
+  border-radius: 2.5em; /*Allows for curved rectangle shape*/
   font-size: 2em;
   width: 410px;
   height: 50px;
 
+}
 
+.Donation_Amount{
+  align-items: flex-start; /* Ensures buttons don't stretch */ 
+  justify-content: left;
+  padding: 2px 10px;
+  margin-top: 5rem; 
+  display: flex; 
+  flex-direction: column; 
+
+}
+
+.btn{
+  position: relative; 
+  background: #FFFFFF;
+  color: #000000;
+  font-size: 1em;
+  width: 28rem;
+  margin-bottom: 2rem;
+  margin-left: 12em; 
+  padding: 1rem 0; 
+  border-radius: 2.5em; 
 }
