--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -91,13 +91,20 @@ a{
 
 }
 
-.Images_Your_Impact{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+
+.Your_Impact_Section{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
+#First_Column{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
 
+}
 
 #Your_Impact_Titles{
   display: flex;
@@ -110,6 +117,7 @@ a{
   font-size: 25px;
   display: flex;
   text-align: center;
+  flex-wrap: nowrap;
   width: auto;
 
 }
@@ -241,3 +249,5 @@ h1{
   padding: 1rem 0; 
   border-radius: 2.5em; 
 }
+
+
