--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -103,6 +103,17 @@ a{
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  font-size: 25px;
+
+}
+
+#Third_Row{
+  display: flex;
+  flex-direction: row; 
+  text-aign:center;
+  font-size: 20px;
+
+
 
 }
 
