--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -110,8 +110,10 @@ a{
 #Third_Row{
   display: flex;
   flex-direction: row; 
-  text-aign:center;
+  text-align:center;
   font-size: 20px;
+  word-wrap: break-word;
+  max-width: 350px; /*Allows for text to not overflow*/
 
 
 
@@ -175,7 +177,7 @@ a{
 }
 
 h1{
-  margin: 70px;
+  margin: 100px;
   font-size: 2.5em; 
   text-align: center;
   padding: 0;
