--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -127,7 +127,7 @@ a{
 
 #Your_Impact{  
   height: 100vh;
-  background: lightgreen;
+  background: #FBECE1;
   display: inline-block;
   width: 100%;
 
@@ -156,6 +156,7 @@ a{
   font-size: 20px;
   word-wrap: break-word;
   max-width: 350px; /*Allows for text to not overflow*/
+  padding: 5px; /*Added padding for spacing between elements*/
 
 
 
@@ -335,7 +336,7 @@ h1{
   text-align: center;
   align-content: center; 
   font-size: 20px;
-  margin-left: 290px;
+  margin-left: 265px;
 
 }
 
@@ -356,3 +357,4 @@ h1{
   top: 0;
 
 }
+
