--- a/DonateCSS.css
+++ b/DonateCSS.css
@@ -154,3 +154,99 @@ h1{
   }
 }
  
+ 
+.Donation_Option{
+  text-align: center;
+  margin-bottom: -50px;
+
+  
+}
+
+.Donation_Option select{
+  background: #FFFFFF;
+  border-color: #707070;
+  font-family: Montserrat;
+  border-width: 3px;
+  color: #000000;
+  text-align: center; 
+  padding: 0 0 0 0.5em;
+  border-radius: 2.5em; /*Allows for curved rectangle shape*/
+  font-size: 2em;
+  width: 410px;
+  height: 50px;
+
+}
+
+.Donation_Amount_Element{
+}
+
+.Donation_Amount{
+  display: flex; 
+  flex-direction: column; 
+  align-items: flex-start; /* Ensures buttons don't stretch */ 
+  padding: 2px 10px;
+  margin-top: 5rem; 
+  text-align: center;
+
+}
+
+.btn{
+  position: relative; 
+  cursor: pointer;
+  font-family: Montserrat;
+  background: #FFFFFF;
+  color: #000000;
+  font-size: 2.1875em;
+  width: 28rem;
+  margin-bottom: 2rem;
+  margin-left: 6em; 
+  padding: 1rem 0; 
+  border-radius: 2.5em; 
+  transition: 0.3s /*Delay/transition time used to create opacity like animation */
+}
+
+.btn:hover{ /*Changess to green colour and white text when hovering over donation amounts*/
+  background-color: green; 
+  color: white;
+}
+.Donation_Inspiration{
+  display: flex;
+  justify-content: flex-end;
+  float: right;
+  margin-right: 100px;
+}
+
+.btn-btn-continue{
+  display: flex;
+  flex-direction: column;
+  padding: 30px 100px;
+  background-color: rgba(46,196,182,1);
+  border: none;
+  font-family: Montserrat;
+  border-radius: 50px;
+  cursor: pointer;
+  color: #FFFFFF;
+  font-weight: bold;
+  text-align: center;
+  align-content: center; 
+  font-size: 20px;
+  margin-left: 265px;
+}
+
+.Select_Donate_Text{
+  display: inline-block;
+  margin-left: 255px; 
+  margin-bottom: 50px;
+}
+
+.Donation_Benefits{
+  display: flex;
+  flex-direction: column; 
+  float: right;
+  margin-top: 100px;
+  margin-right: 100px;
+  width: 599.97px;
+  height: 500px;
+  top: 0;
+
+}
