--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -197,7 +197,7 @@ a{
   /*em allows for relative measurements/units for text allowing for responsiveness*/
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%); /*Allows text to be vertically aligned in the center of page at all times*/
 
 }
 
@@ -225,7 +225,6 @@ h1{
   text-align: center;
   padding: 0;
 }
-
 
 
 
@@ -304,6 +303,7 @@ h1{
 
 .btn{
   position: relative; 
+  cursor: pointer;
   font-family: Montserrat;
   background: #FFFFFF;
   color: #000000;
@@ -313,8 +313,13 @@ h1{
   margin-left: 6em; 
   padding: 1rem 0; 
   border-radius: 2.5em; 
+  transition: 0.3s /*Delay/transition time used to create opacity like animation */
 }
 
+.btn:hover{ /*Changess to green colour and white text when hovering over donation amounts*/
+  background-color: green; 
+  color: white;
+}
 .Donation_Inspiration{
   display: flex;
   justify-content: flex-end;
@@ -337,7 +342,6 @@ h1{
   align-content: center; 
   font-size: 20px;
   margin-left: 265px;
-
 }
 
 .Select_Donate_Text{
