--- a/proposalCSS.css
+++ b/proposalCSS.css
@@ -342,6 +342,12 @@ h1{
   align-content: center; 
   font-size: 20px;
   margin-left: 265px;
+  transition: 0.3s;
+}
+
+.btn-btn-continue:hover{
+  background-color: green; 
+  color: white;
 }
 
 .Select_Donate_Text{
